-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.0.0 Beta 2
-
None
-
Windows 7
-
42507173bd985d8b3875d9fd0141a1dd7ad4e544
In Qt 5, child windows are no longer hidden when the parent window is minimized.
(Qt 4.* automatically hides child windows when the parent is minimized.)
Windows: Qt 4 minimizes transient children, Qt 5 does not
XCB: Qt 4 and 5 minimize transient children (using WM properties, should work for sane WMs)
Mac: Neither Qt 4 nor 5 minimize transient children