Fix automatic hiding/restoring of transient children.

Task-number: QTBUG-28408

Change-Id: I31382c4edc213961dfb132af3bf5202e178e7a57
Reviewed-by: Joerg Bornemann <joerg.bornemann@digia.com>

cregit: 42507173bd985d8b3875d9fd0141a1dd7ad4e544 https://github.com/qt/qtbase/commit/42507173bd985d8b3875d9fd0141a1dd7ad4e544